add missing key in config files

--- a/confs/14deg_planeFull.conf
+++ b/confs/14deg_planeFull.conf
@@ -1,5 +1,6 @@
 conf {
     dataset =  14deg_planeFull
+    is_real = False
     image_setkeyname = "images" 
     expID =   14deg_planeFull 
     timef = False
