--- a/confs/14deg_submarine.conf
+++ b/confs/14deg_submarine.conf
@@ -1,5 +1,6 @@
 conf {
     dataset =  14deg_submarine 
+    is_real = False
     image_setkeyname = "images" 
     expID =   14deg_submarine 
     timef = False
