--- a/confs/28deg_planeFull.conf
+++ b/confs/28deg_planeFull.conf
@@ -1,5 +1,6 @@
 conf {
     dataset =  28deg_planeFull
+    is_real = False
     image_setkeyname = "images" 
     expID =   28deg_planeFull 
     timef = False
