--- a/confs/28deg_submarine.conf
+++ b/confs/28deg_submarine.conf
@@ -1,5 +1,6 @@
 conf {
     dataset =  28deg_planeMissing
+    is_real = False
     image_setkeyname = "images" 
     expID =   28deg_planeMissing 
     timef = False
